# patch_magic

./: CMakeLists.txt
examples/: appreggio.cpp  appregio.cpp  arpeggio.cpp  envelope.cpp  generators.cpp  main.cpp  main.h  melody.cpp  sine_440.cpp  sine_440_220_mixed.cpp  two_instruments_separate_timelines.cpp
include/: event_generators.hpp  event_id_generator.hpp  instrument.hpp  invoker.hpp  loaded_op.hpp  loader.hpp  math.hpp  note_data.hpp  notes.hpp  op_descriptions.hpp  patch.hpp  polyphony.hpp  primitives.hpp  program.hpp  runtime.hpp  runtime_op.hpp  runtime_processor_wrappers.hpp  runtime_processors.hpp  sequences.hpp  source.hpp  states.hpp  synth.hpp  timeline.hpp  utils.hpp  voice.hpp
include/runtime_processors/: base_freq.hpp  envelope.hpp  generators.hpp  various.hpp
src/: event_generators.cpp  instrument.cpp  runtime.cpp  runtime_processors.cpp  states.cpp  synth.cpp  timeline.cpp  voice.cpp
